Add simple recent articles page with static content

--- a/lpsite/index.html
+++ b/lpsite/index.html
@@ -33,7 +33,7 @@
                 <li><a href="#profile">プロフィール</a></li>
                 <li><a href="#links">リンク</a></li>
                 <li><a href="#popular-articles">人気記事</a></li>
-                <li><a href="recent-articles.html">新着記事</a></li>
+                <li><a href="recent-articles-simple.html">新着記事</a></li>
                 <li><a href="https://x.com/syounosukeblog" target="_blank">お問い合わせ</a></li>
             </ul>
             <div class="mobile-menu-toggle">
